apps/ingress-mc/resources/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-mc-allow
spec:
  endpointSelector:
    matchLabels:
      allow-ingress-mc: "true"
  ingress:
    - toPorts:
        - ports:
            - port: "minecraft"
              protocol: ANY
      fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": ingress
            app.kubernetes.io/name: mc-router
            app.kubernetes.io/instance: ingress-mc
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-mc-allow-world
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mc-router
      app.kubernetes.io/instance: ingress-mc
  ingress:
    - toPorts:
        - ports:
            - port: "minecraft"
      fromEntities:
        - world
